# GretlAPI

./: CMakeLists.txt  arma_example.c  dj_garch.c  nls_example.c  simple_client.c
